<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                                              android:id="@+id/profile_image"
                                                              android:layout_width="72dp"
                                                              android:layout_height="72dp"
                                                              app:civ_border_color="@color/colorPrimary"
                                                              app:civ_border_width="1dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textColor="@color/gray"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                </LinearLayout>
            </LinearLayout>

            <!--      <View
                      android:layout_width="match_parent"
                      android:layout_height="1dp"
                      android:background="@color/silver" />

                  <TextView
                      android:id="@+id/simple_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/black"
                      android:textSize="20sp" />


                  <Button
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:onClick="testCCode"
                      android:text="test" />-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/silver"/>


            <TextView
                android:id="@+id/poll_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/big_text"
                android:textStyle="bold"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/next_poll_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/new_poll"/>

                <TextView
                    android:id="@+id/new_poll_starttime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/today_topic"/>

                <TextView
                    android:id="@+id/new_poll_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/new_poll_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/today_topic"/>

                <TextView
                    android:id="@+id/poll_countdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/do_you_want_to_join"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text"/>

                <TextView
                    android:id="@+id/poll_status_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/do_you_want_to_join"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <LinearLayout
                    android:id="@+id/poll_accepted_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:visibility="gone">


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/poll_declined_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/xml_button_selector"
                        android:gravity="center"
                        android:onClick="acceptNextPoll"
                        android:text="@string/join"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/poll_total_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/poll_answer_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <EditText
                            android:id="@+id/poll_answer_edittext"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/your_answer"
                            android:inputType="numberSigned"/>

                        <Button
                            android:id="@+id/poll_answer_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/xml_button_selector"
                            android:onClick="saveAnswer"
                            android:text="@string/save"
                            android:textColor="@color/white"/>

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/prices_in_euro"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/poll_not_answered_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2">


                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/xml_button_selector"
                        android:onClick="declineNextPoll"
                        android:text="@string/no"
                        android:textColor="@color/white"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/xml_button_selector"
                        android:onClick="acceptNextPoll"
                        android:text="@string/yes"
                        android:textColor="@color/white"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
